manifests/apps/media/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: media-manager
    component: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: media-manager
      component: jellyfin
  template:
    metadata:
      labels:
        app: media-manager
        component: jellyfin
    spec:
      hostname: jellyfin
      containers:
      - image: linuxserver/jellyfin:12.2ubu2604-ls52
        name: jellyfin
        ports:
        - containerPort: 8096
          name: http
          protocol: TCP
        - containerPort: 8920
          name: https
          protocol: TCP
        - containerPort: 1900
          name: service-disc
          protocol: UDP
        - containerPort: 7359
          name: client-disc
          protocol: UDP
        resources:
          requests:
            cpu: 50m
            memory: 512Mi
        volumeMounts:
        - name: hwa
          mountPath: /dev/dri
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /data/movies
          readOnly: true
        - name: tvseries
          mountPath: /data/tv
          readOnly: true
        securityContext:
          privileged: true
      volumes:
      - name: hwa
        hostPath:
          path: /dev/dri
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: movies
        hostPath:
          path: /mnt/data/library/movies
          type: Directory
      - name: tvseries
        hostPath:
          path: /mnt/data/library/tvseries
          type: Directory
      restartPolicy: Always
      nodeName: xialing
