manifests/apps/media/jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - watch.frias.app
      secretName: watch-frias-app-tls
  rules:
    - host: watch.frias.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-tcp
                port:
                  number: 8096
